@@ -5,6 +5,8 @@ Branch 3.24
 
 The following bugs have been fixed or resolved on this branch.
 
+489913  WARNING: unhandled amd64-linux syscall: 444 (landlock_create_ruleset)
+
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
 where XXXXXX is the bug number as listed above.
